edit game and delete game

--- a/src/main/resources/static/css/game_form.css
+++ b/src/main/resources/static/css/game_form.css
@@ -68,3 +68,21 @@
 .form-style-9 ul li input[type="submit"]:hover {
     background: #28739E linear-gradient(to bottom, #2D77A2 5%, #337DA8 100%);
 }
+
+.form-style-9 input[type="submit"] {
+    -moz-box-shadow: inset 0px 1px 0px 0px #c50863;
+    -webkit-box-shadow: inset 0px 1px 0px 0px #c50863;
+    box-shadow: inset 0px 1px 0px 0px #c50863;
+    background-color: #ec0a6a;
+    border: 1px solid #590026;
+    display: inline-block;
+    cursor: pointer;
+    color: #FFFFFF;
+    padding: 8px 18px;
+    text-decoration: none;
+    font: 12px Arial, Helvetica, sans-serif;
+}
+
+.form-style-9 input[type="submit"]:hover {
+    background: #770038 linear-gradient(to bottom, #98004a 5%, #b9055d 100%);
+}
