--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,6 +7,7 @@
     <script th:src="@{/js/jquery-3.4.1.min.js}" type="text/javascript"></script>
     <script th:src="@{/js/popper.min.js}" type="text/javascript"></script>
     <script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
+    <script th:src="@{/js/utils.js}" type="text/javascript"></script>
 
     <link rel="icon" type="image/svg" th:href="@{/img/favicon.svg}"/>
 </head>
