--- a/src/main/resources/templates/games/game_form.html
+++ b/src/main/resources/templates/games/game_form.html
@@ -11,6 +11,8 @@
 <body>
 
 <div>
+    <div th:replace="fragments/navbar::navbar"></div>
+
     <form th:action="@{/insertgame}" th:object="${gameObject}" method="post"
           class="form-style-9" enctype="multipart/form-data">
         <ul>
