--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -30,7 +30,8 @@
         <div class="float-right">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link mr-3" th:href="@{/logout}">Logout</a>
+                    <a sec:authorize="isAuthenticated()" class="nav-link mr-3" th:href="@{/logout}">Logout</a>
+                    <a sec:authorize="isAnonymous()" class="nav-link mr-3" th:href="@{/login}">Login</a>
                 </li>
             </ul>
         </div>
