form validation example

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -58,3 +58,14 @@ body {
     margin-bottom: 6px;
     text-align: start;
 }
+
+.validation {
+    margin-top: 10px;
+    color: #e8200e;
+    font-size: 14px;
+}
+
+.validation:before {
+    content: '*';
+    margin-right: 3px;
+}
