--- a/src/main/resources/templates/games/game_form.html
+++ b/src/main/resources/templates/games/game_form.html
@@ -19,6 +19,7 @@
             <li>
                 <input type="text" class="field-style field-full align-left"
                        placeholder="Name" th:field="*{name}" />
+                <p class="validation" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
 
                 <!--
                  az th field estefade nakardim ta meghdare sefr darune input gharar nagirad
