--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -18,6 +18,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" th:href="@{/}">Games</a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" th:href="@{/newgame}">Add</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/studios}">Studios</a>
                 </li>
