--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:weight@100;200;300;400;500;600;700;800&display=swap");
+
 body {
     text-align: center;
     background: #f8f4f2;
@@ -5,6 +7,7 @@ body {
 }
 
 .a-box {
+    margin: 10px;
     display: inline-block;
     width: 240px;
     text-align: center;
@@ -68,4 +71,39 @@ body {
 .validation:before {
     content: '*';
     margin-right: 3px;
+}
+
+.height {
+    height: 100vh
+}
+
+.search {
+    position: relative;
+    box-shadow: 0 0 40px rgba(51, 51, 51, .1)
+}
+
+.search input {
+    height: 45px;
+    text-indent: 25px;
+    border: 2px solid #d6d4d4
+}
+
+.search input:focus {
+    box-shadow: none;
+    border: 2px solid blue
+}
+
+.search .fa-search {
+    position: absolute;
+    top: 20px;
+    left: 16px
+}
+
+.search button {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    height: 35px;
+    width: 110px;
+    background: blue
 }
