--- a/src/main/resources/templates/games.html
+++ b/src/main/resources/templates/games.html
@@ -10,7 +10,27 @@
 <body>
     <div th:replace="fragments/navbar::navbar"></div>
 
-    <div style="padding: 30px;">
+    <div class="container">
+        <form th:action="@{/}" method="get">
+            <div class="row d-flex justify-content-center align-items-center">
+                <div class="col-md-6">
+                    <div class="search">
+                        <i class="fa fa-search"></i>
+                        <input type="text" class="form-control"
+                               placeholder="Search in games by title, studio ..."
+                                th:field="${gsearch.name}">
+                        <button type="submit" class="btn btn-primary">Search</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <div style="padding-top: 20px; padding-bottom: 15px;">
+        <div th:replace="fragments/pagination::pagination"></div>
+    </div>
+
+    <div class="container">
         <div class="a-box" th:each="game : ${records}">
             <div class="img-container">
                 <div class="img-inner">
