--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,5 +9,11 @@
     <script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
     <script th:src="@{/js/utils.js}" type="text/javascript"></script>
 
-    <link rel="icon" type="image/svg" th:href="@{/img/favicon.svg}"/>
+    <!--
+        yek file be name favicon.ico dar roote pushe static migozarim
+        in file ra dar ghesmate security baraye hame azad migozarim
+        favicon dar hame safahat namayesh miyabad.
+        code badi baraye in hast ke yek safhe be khosus favicon dashte bashad
+    -->
+    <!-- <link rel="icon" type="image/ico" th:href="@{/favicon.ico}"/> -->
 </head>
