--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -30,6 +30,9 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/platgames/}">PlatGames</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/platgames/wishlist/}">WishList</a>
+                </li>
             </ul>
         </div>
 
