--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -31,6 +31,9 @@
                     <a class="nav-link" th:href="@{/platgames/}">PlatGames</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" th:href="@{/platgames/add/}">AddPlat</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" th:href="@{/platgames/wishlist/}">WishList</a>
                 </li>
                 <li class="nav-item">
