--- a/src/main/resources/templates/plat_games/add_plat_game.html
+++ b/src/main/resources/templates/plat_games/add_plat_game.html
@@ -12,25 +12,7 @@
 
 <div>
     <div th:replace="fragments/navbar::navbar"></div>
-
-    <form th:action="@{/platgames/insertgame/}" method="post"
-          class="form-style-9" enctype="multipart/form-data">
-        <ul>
-            <li>
-                <input type="text" class="field-style field-full align-left"
-                       placeholder="PSNP Url" id="psnp" name="psnp" />
-
-                <input type="text" class="field-style field-full align-left"
-                       placeholder="HLTB Url" id="hltb" name="hltb" />
-
-                <input type="text" class="field-style field-full align-left"
-                       placeholder="PSN ID" id="psnid" name="psnid" />
-            </li>
-            <li>
-                <input type="submit" value="Add Game" />
-            </li>
-        </ul>
-    </form>
+    <div th:replace="fragments/plat_game_urls::pg_urls"></div>
 </div>
 
 </body>
