--- a/src/main/resources/templates/plat_games/plat_games.html
+++ b/src/main/resources/templates/plat_games/plat_games.html
@@ -31,6 +31,10 @@
             <button type="button" class="btn btn-primary sort-button">Owners</button>
         </a>
 
+        <a th:href="'/platgames/?sort=creation'">
+            <button type="button" class="btn btn-danger sort-button">Creation</button>
+        </a>
+
         <a th:href="'/platgames/?sort=points'">
             <button type="button" class="btn btn-secondary sort-button">Points</button>
         </a>
@@ -46,7 +50,9 @@
         <a th:href="'/platgames/?sort=tc'">
             <button type="button" class="btn btn-danger sort-button">TrophiesCount</button>
         </a>
+    </div>
 
+    <div th:if="${type.equals('plats')}" style="margin-top: 8px;">
         <a th:href="'/platgames/?sort=fp'">
             <button type="button" class="btn btn-warning sort-button">FinalPrice</button>
         </a>
